# SpatialApp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  app.py  config.py  design.md  docker-compose.yml  gunicorn.conf.py  project_structure.txt  pytest.ini  requirements.txt  state.py  work_plan.md
.github/workflows/: ci.yml
.project_plan/: ARCHITECTURE.md  CAPABILITY_MAP.md  ENRICHMENT_PLAN.md  IMPROVEMENT_PLAN.md  README.md  RESEARCH_NL_GIS.md  ROADMAP.md  STATUS.md
OSM_auto_label/: .gitignore  README.md  __init__.py  app.py  classifier.py  config.py  downloader.py  example.ipynb  main.py  py.typed  pyproject.toml  requirements.txt  visualizer.py
OSM_auto_label/tests/: __init__.py  test_app.py  test_classifier.py  test_config.py  test_downloader.py  test_visualizer.py
blueprints/: __init__.py  annotations.py  auth.py  chat.py  collab.py  dashboard.py  layers.py  osm.py  websocket.py
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  POSTGRES_MIGRATION.md  TOOL_CATALOG.md  USER_GUIDE.md
docs/v1/: ENRICHMENT_PLAN.md  IMPROVEMENT_PLAN.md  README.md
docs/v2/: 01-accuracy-audit-plan.md  02-tool-descriptions-plan.md  03-complex-queries-plan.md  04-context-awareness-plan.md  05-error-recovery-plan.md  06-eval-framework-plan.md  07-provider-tuning-plan.md  08-raster-analysis-plan.md  09-collaboration-plan.md  10-data-pipeline-plan.md  11-visualization-plan.md  12-osm-autolabel-plan.md  13-production-plan.md  DEPENDENCIES.md  PROMPTS.md  README.md  baseline-classified.json  baseline-results.json  baseline-scorecard.md  failure-patterns.md  post-02-rescoped-results.json  post-02-surgical-results.json
nl_gis/: __init__.py  chat.py  context.py  geo_utils.py  llm_provider.py  query_patterns.py  schemas.py  tool_handlers.py  tools.py  validation.py
nl_gis/handlers/: __init__.py  layers.py  (+7 more)
services/: cache.py  circuit_breaker.py  code_executor.py  database.py  db_interface.py  llm_cache.py  logging_config.py  metrics.py  model_router.py  osrm_client.py  postgres_db.py  rate_limiter.py  valhalla_client.py
templates/: dashboard.html  index.html  saved_annotations.html
tests/: conftest.py  test_advanced_analysis.py  test_app.py  test_auth.py  test_autolabel.py  test_chat.py  test_chat_api.py  test_chat_engine.py  test_code_executor.py  test_collaboration.py  test_context.py  test_coverage_gaps.py  test_dashboard.py  test_data_pipeline.py  test_database.py  test_db_interface.py  test_e2e.py  test_error_recovery.py  test_eval_framework.py  test_eval_plan06.py  test_filter_layer.py  test_geo_utils.py  test_geocoding.py  test_geometry_tools.py  test_golden_path.py  test_import_export.py  test_integration_pipelines.py  test_layer_pagination.py  test_missing_capabilities.py  test_multistop_routing.py  test_network_analysis.py  test_overlay_ops.py  test_performance.py  test_phase2_handlers.py  test_phase4_routing.py  test_phase5_production.py  test_pipeline.py  test_plan_mode.py  test_production_hardening.py  test_prometheus_metrics.py  (+9 more)
work_plan/: README.md  RESUME-HERE.md
(+44 files in other folders)
